finish and sexy and adjusted! Have to update a bit delete request
