# schemas/swagger.json
@@ -29,7 +29,7 @@
       "name": "authorization",
       "scheme": "bearer",
       "bearerFormat": "JWT",
-      "in": "header"
+      "description": "Put here your JWT with bearer writed before, eg: 'bearer jwt' "
     }
   },
   "consumes": [
@@ -279,7 +279,19 @@
             }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Invalid token",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Your rights are revoked"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
             "description": "Server Error",
@@ -316,7 +328,8 @@
             "name": "menuId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of menu"
           },
           {
             "name": "authorization",
@@ -326,21 +339,62 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Return the detail of the menu founded by its ID",
+            "schema": {
+              "$ref": "#/definitions/Menus"
+            }
           },
           "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
+            "description": "Invalid token",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Your rights are revoked"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not found error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Not found, try again!"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal server error"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/createmenu": {
@@ -355,22 +409,29 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Menu creation",
+            "schema": {
+              "$ref": "#/definitions/Menus"
+            }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "401": {
             "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/deletemenu": {
@@ -387,32 +448,33 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Id of the menu to delete",
             "schema": {
               "type": "object",
               "properties": {
                 "menuId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "string"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/updatemenu": {
@@ -429,32 +491,96 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "New menu, only Id is required",
             "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/MenuUpdate"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Menu update success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Menu update successful"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid or insufficient data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Invalid or insufficient data"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Invalid token",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Your rights are revoked"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Not found, sorry!"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal server error"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
@@ -504,7 +630,7 @@
           "type": "string",
           "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,}$",
           "description": "email of the user",
-          "default": "totiu@gmail.com"
+          "default": "illbeagodness@gmail.com"
         },
         "password": {
           "type": "string",
@@ -547,6 +673,34 @@
         "main",
         "dessert",
         "price"
+      ]
+    },
+    "MenuUpdate": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "default": "Axfdsf451dqDs"
+        },
+        "starter": {
+          "type": "string",
+          "default": "Salade de thon"
+        },
+        "main": {
+          "type": "string",
+          "default": "Tartare de boeuf bien cuit"
+        },
+        "dessert": {
+          "type": "string",
+          "default": "Soupe à l'oignon"
+        },
+        "price": {
+          "type": "number",
+          "default": 75.5
+        }
+      },
+      "required": [
+        "id"
       ]
     }
   }
